Fix header displaying behind sidebar

--- a/web/src/app/sidebar/sidebar.component.css
+++ b/web/src/app/sidebar/sidebar.component.css
@@ -5,6 +5,7 @@
     top: 0;
     left: 0;
     position: fixed;
+    z-index: 1;
 
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
 }
